# booktrack-cli

./: .clang-tidy  .gitignore  CMakeLists.txt  DEVELOPMENT.md  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_project_linux.yml  build_project_windows.yml  run_unit_tests.yml
docs/: CMakeLists.txt  Doxyfile.in
src/: book.cc  book.h  cli.cc  cli.h  details.cc  details.h  library.cc  library.h  main.cc  statistics.cc  statistics.h  sysinfoaggregator.cc  sysinfoaggregator.h  utilities.cc  utilities.h  version.h.in
test/: CMakeLists.txt  book_constructor_test.cc  book_readingtime_test.cc  book_setdatafromjson_test.cc  book_tojsonstring_test.cc  library_constructor_test.cc  statistics_test.cc  sysinfoaggregator_test.cc  utilities_test.cc
tools/: run-build.sh  run-clang-tidy.sh
